# catalyst-q-benchmarks

./: .gitignore  README.md  environment.benchmark.yml  pyproject.toml
.github/workflows/: full-evidence.yml
benchmarks/: suites.json
benchmarks/instances/: qubo_maxcut_smoke.json
docs/: benchmark_matrix.md  benchmark_strategy.md  claims_policy.md  execution_protocol.md  remote_evidence_runner.md  vc_evidence_brief.md
ops/benchmark-runner/: Dockerfile
requirements/: benchmark-core.txt  benchmark-remote.txt
results/: evidence_index.md  full_evidence_package.json  full_evidence_package.md
results/full_campaign_20260513/: full_evidence_package.json  full_evidence_package.md
results/full_campaign_20260513/raw/: sdk_qubo_maxcut_smoke.jsonl  sdk_qubo_maxcut_smoke.md
results/full_campaign_20260513_remote/: full_evidence_package.json  full_evidence_package.md
results/high_qubit_exactness/: high_qubit_exactness.json  high_qubit_exactness.md
results/raw/: .gitkeep  sdk_qubo_maxcut_smoke.jsonl  sdk_qubo_maxcut_smoke.md
schemas/: result.schema.json
scripts/: build_full_evidence_package.py  run_high_qubit_exactness.py  run_official_corpus.py  run_public_evidence.py  run_sdk_qubo_maxcut_campaign.py
src/catalyst_q_benchmarks/: __init__.py  full_evidence.py  high_qubit_exactness.py  manifest.py  official_corpora.py  patch.py  patch_bqp.py  patch_dimacs.py  report.py  sdk_campaign.py  validators.py
tests/: test_evidence_manifest.py  test_full_evidence_package.py  test_high_qubit_exactness.py  test_official_corpora.py  test_sdk_qubo_maxcut_campaign.py
(+39 files in other folders)
